# sketchy

./: .eslintrc.js  .gitignore  README.md  package-lock.json  package.json
dist_electron/: index.js
public/: index.html
src/: App.vue  background.js  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/classes/: AnimationFrame.js  Drawing.js  Drawing2.js
src/components/: Drawing.vue  Tools.vue
src/router/: index.js
src/styles/: global.styl
src/themes/: index.js  themes.json
src/views/: MainWindow.vue  Sketch.vue
